<package format="3">
  <name>fastdds_demo</name>
  <version>0.0.0</version>
  <description>Demo node using FastDDS</description>
  <maintainer email="xx@xx.com">your name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>base_interfaces</exec_depend>
</package>
