<?xml version="1.0"?>
<package format="3">
  <name>polygon_stamped_sub_ros</name>
  <version>0.0.0</version>
  <description>ROS2 subscriber for PolygonStamped using Fast DDS generated types</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>fastdds</depend>
  <depend>fastcdr</depend>
</package>
